<resources>
    <string name="app_name">RoadTrippr</string>
    <string name="google_app_id">635253832970</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="end_location_label">Trip Destination</string>
    <string name="meal_time_label">Desired Meal Time:</string>
    <string name="continue_button_label">Continue</string>
    <string name="restaurants_label">Favorite Restaurants</string>
    <string name="restaurant_types_label">Favorite Restaurant Types</string>
    <string name="unacceptable_restaurants_label">Unacceptable Restaurants</string>
    <string name="save_button_label">Save</string>
    <string name="eating_window_label">How soon should we notify you? (min)</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="view_nearby_button_label">View Nearby Restaurants</string>
    <string name="time_remaining_label">Time Remaining:</string>

    <string-array name="restaurants">
        <item>Taco Bell</item>
        <item>Burger King</item>
        <item>Five Guys</item>
        <item>Wendy\'s</item>
        <item>McDonald\'s</item>
        <item>Cookout</item>
        <item>Chick-fil-A</item>
    </string-array>

    <string-array name="restaurants_types">
        <item>Mexican</item>
        <item>Burgers</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Italian</item>
    </string-array>

    <string-array name="times">
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>20 Minutes</item>
        <item>25 Minutes</item>
        <item>30 Minutes</item>
    </string-array>

</resources>
