<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="roadtrippr.roadtrippr.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/restaurants_label"
                android:id="@+id/restaurants_label"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/restaurants_field" />

            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurants_field"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/restaurant_types_label"
                android:id="@+id/restaurant_types_label"
                android:layout_marginTop="25dp"
                android:labelFor="@+id/restaurant_types_field"/>

            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_types_field"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unacceptable_restaurants_label"
                android:id="@+id/unacceptable_restaurants_label"
                android:layout_marginTop="25dp"
                android:labelFor="@+id/unacceptable_restaurants_field"/>

            <MultiAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unacceptable_restaurants_field"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/eating_window_label"
                android:id="@+id/textView6"
                android:layout_marginTop="25dp" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eating_window_picker"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_label"
                android:id="@+id/saveButton"
                android:minHeight="75dp"
                android:minWidth="144dp"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
